@@ -1,0 +1,8 @@
+template <class T>
+struct A
+{
+  A();
+};
+
+template <class T>
+A<T>::A() {  }
